@@ -184,7 +184,7 @@ MATRIX:
     OUT: if (0 != igraph_matrix_init(&%C%, 0, 0)) { \
             igraph_error("", __FILE__, __LINE__, IGRAPH_ENOMEM); \
          } \
-         IGRAPH_FINALLY(igraph_vector_destroy, &%C%);
+         IGRAPH_FINALLY(igraph_matrix_destroy, &%C%);
   OUTCONV:
     OUT: PROTECT(%I%=R_igraph_matrix_to_SEXP(&%C%)); \
          igraph_matrix_destroy(&%C%); \
@@ -204,6 +204,43 @@ MATRIX_OR_0:
     OUT: PROTECT(%I%=R_igraph_0ormatrix_to_SEXP(&%C%)); \
          igraph_matrix_destroy(&%C%); \
          IGRAPH_FINALLY_CLEAN(1);
+
+##################################
+# 3d array
+
+ARRAY3:
+  CTYPE: igraph_array3_t
+  CALL: &%C%
+  INCONV:
+    IN: R_igraph_SEXP_to_array3(%I%, &%C%);
+    OUT: if (0 != igraph_array3_init(&%C%, 0, 0, 0)) { \
+           igraph_error("", __FILE__, __LINE__, IGRAPH_ENOMEM); \
+         } \
+         IGRAPH_FINALLY(igraph_array3_destroy, &%C%);
+  OUTCONV:
+    OUT: PROTECT(%I%=R_igraph_array3_to_SEXP(&%C%)); \
+         igraph_array3_destroy(&%C%); \
+         IGRAPH_FINALLY_CLEAN(1);
+
+ARRAY3_OR_0:
+  CTYPE: igraph_array3_t
+  CALL: (isNull(%I%) ? 0 : &%C%)
+  INCONV:
+    IN: if (!isNull(%I%)) { R_igraph_SEXP_to_array3(%I%, &%C%); }
+    OUT: if (0 != igraph_array3_init(&%C%, 0, 0, 0)) { \
+            igraph_error("", __FILE__, __LINE__, IGRAPH_ENOMEM); \
+         } \
+         IGRAPH_FINALLY(igraph_array3_destroy, &%C%); \
+         %I%=NEW_NUMERIC(0); /* hack to have a non-NULL value */
+  OUTCONV:
+    OUT: PROTECT(%I%=R_igraph_0orarray3_to_SEXP(&%C%)); \
+         igraph_array3_destroy(&%C%); \
+         IGRAPH_FINALLY_CLEAN(1);
+
+##################################
+# 3d array
+
+
 
 ##################################
 # Some vertices of a graph
