@@ -26,6 +26,12 @@ MATRIX:
 MATRIX_OR_0:
     INVONV: if (!is.null(%I%)) %I% <- structure(as.double(%I%), dim=dim(%I%))
 
+ARRAY3:
+    INCONV: %I% <- structure(as.double(%I%), dim=dim(%I%))
+
+ARRAY3_OR_0:
+    INCONV: if (!is.null(%I%)) %I% <- structure(as.double(%I%), dim=dim(%I%))
+
 ATTRIBUTES:
 
 CONNECTEDNESS:
