@@ -928,6 +928,20 @@ igraph_revolver_probs_d:
                 BOOLEAN ntk=False
         NAME-R: revolver.probs.d
 
+igraph_revolver_ml_de:
+        PARAMS: GRAPH graph, INTEGER niter, OUT MATRIX kernel, \
+                VECTOR cats, OUT MATRIX_OR_0 cites, REAL delta=1e-10, \
+                OUT REALPTR logprob, OUT REALPTR logmax
+        NAME-R: revolver.ml.de
+        FLAGS: PROGRESS
+
+igraph_revolver_ml_ade:
+        PARAMS: GRAPH graph, INTEGER niter, OUT ARRAY3 kernel, \
+                VECTOR cats, OUT ARRAY3_OR_0 cites, INTEGER agebins=300, \
+                REAL delta=1e-10, OUT REALPTR logprob, OUT REALPTR logmax
+        NAME-R: revolver.ml.ade
+        FLAGS: PROGRESS
+
 igraph_revolver_ml_f:
         PARAMS: GRAPH graph, INTEGER niter, OUT VECTOR kernel, \
                 OUT VECTOR_OR_0 cites, REAL delta=1e-10, OUT REALPTR logprob, \
